k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agrosolutions-workers
  labels:
    app: agrosolutions-workers
    environment: production
